erro ao cliente ligar ao servidor primario enquando o primario esta ligado ao secundario. E o primario nao liga muito bem ao secundario. ERRO: write failed

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
                 "type": "cppdbg",
                 "request": "launch",
                 "program": "${workspaceRoot}/binary/server",
-                "args": ["54323"], 
+                "args": ["54322", "127.0.0.1:54321", "20", "15", "10"], 
                 "stopAtEntry": false,
                 "cwd": "${workspaceRoot}",
                 "environment": [],
