--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,15 +2,11 @@
         "version": "0.2.0",
         "configurations": [
             { 
-                "name": "(gdb) server",
+                "name": "(gdb) client",
                 "type": "cppdbg",
                 "request": "launch",
-                "program": "${workspaceRoot}/binary/server",
-<<<<<<< HEAD
-                "args": ["54321"], 
-=======
-                "args": ["54322"], 
->>>>>>> ca654ba1abacd804315ac08724b53427d6079d9f
+                "program": "${workspaceRoot}/binary/client",
+                "args": ["127.0.0.1:54323","127.0.0.1:54322"], 
                 "stopAtEntry": false,
                 "cwd": "${workspaceRoot}",
                 "environment": [],
